# csv-slice

./: .gitignore  Cargo.toml  README.md
examples/: columns.rs  rows.rs  sample.csv
src/: error.rs  lib.rs  main.rs
